RESOLVED FIXED289588
[UnifiedPDF] [iOS Debug] Web content process crashes immediately when a PDF document is loaded
https://bugs.webkit.org/show_bug.cgi?id=289588
Summary [UnifiedPDF] [iOS Debug] Web content process crashes immediately when a PDF d...
Abrar Rahman Protyasha
Reported 2025-03-11 18:51:26 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-03-11 19:01:52 PDT
EWS
Comment 2 2025-03-12 06:28:32 PDT
Committed 292012@main (e46278c3187b): <https://commits.webkit.org/292012@main> Reviewed commits have been landed. Closing PR #42300 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.